--- a/1.SVMR pre input.ipynb
+++ b/1.SVMR pre input.ipynb
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "589e5f49-f0ee-4c1b-ba4e-553a7518d49c",
    "metadata": {},
    "outputs": [],
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "22e82a34-f6d6-4e6c-8088-5ebdafe02bb0",
    "metadata": {},
    "outputs": [
@@ -1128,7 +1128,7 @@
        "49               0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "e9a2f73a-b853-47db-91cb-c0bb253332a5",
    "metadata": {},
    "outputs": [
@@ -1151,7 +1151,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "517f44ba-8ced-4d23-ba26-77574e5cb2ec",
    "metadata": {},
    "outputs": [],
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "a12ada13-d153-4310-a173-27d9ad6a1e8e",
    "metadata": {},
    "outputs": [
@@ -1663,7 +1663,7 @@
        "49       0.00       116983.80         45173.06              0               0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1674,7 +1674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "450b8704-4e8f-41db-96a9-a17353670f60",
    "metadata": {},
    "outputs": [],
@@ -1684,7 +1684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "3be326eb-5c59-406f-a589-09338945a1d3",
    "metadata": {},
    "outputs": [
@@ -1971,7 +1971,7 @@
        "49   14681.40"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1982,7 +1982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "e2df0006-af4a-4266-8ac6-0682defa8384",
    "metadata": {},
    "outputs": [],
@@ -1993,7 +1993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "74a57e5e-a2fa-4fb7-ae4c-0fb024cb308b",
    "metadata": {},
    "outputs": [
@@ -2349,7 +2349,7 @@
        "44   22177.74       154806.14         28334.72              0               0"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2360,8 +2360,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "a6f7e022-8a6a-455f-8b81-604d1b3468d3",
+   "execution_count": 13,
+   "id": "164dfff1-0431-43a1-a9c3-f60c250580be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "sc=StandardScaler()\n",
+    "x_train=sc.fit_transform(x_train)\n",
+    "x_test=sc.transform(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b2a2859a-c401-4d82-a595-9318ffb64d21",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.17644103,  0.84515251,  0.94354978,  2.        , -0.76870611],\n",
+       "       [ 0.96420324,  1.27283565,  0.42738817,  2.        , -0.76870611],\n",
+       "       [-1.47369826,  0.0153175 , -1.52350329, -0.5       ,  1.30088727],\n",
+       "       [-1.48308929, -2.79556363, -1.53809178, -0.5       ,  1.30088727],\n",
+       "       [-0.14952431,  1.13637282, -0.71716495, -0.5       ,  1.30088727],\n",
+       "       [ 0.85312042, -0.04431628,  0.46771725, -0.5       ,  1.30088727],\n",
+       "       [-0.22353674, -0.3151007 , -0.83981652,  2.        , -0.76870611],\n",
+       "       [-0.19454707,  0.21199679, -1.18497259, -0.5       , -0.76870611],\n",
+       "       [ 0.10478723, -0.08388412,  0.48740807, -0.5       , -0.76870611],\n",
+       "       [-1.0096458 , -1.07019473, -0.4040623 , -0.5       , -0.76870611],\n",
+       "       [ 0.06872897, -0.38396487,  0.75036616, -0.5       , -0.76870611],\n",
+       "       [-1.17638797,  0.14067421, -1.26581817, -0.5       ,  1.30088727],\n",
+       "       [ 0.97648631,  0.9689421 ,  0.84958395, -0.5       ,  1.30088727],\n",
+       "       [ 0.39131191,  0.45560401,  0.3979037 , -0.5       , -0.76870611],\n",
+       "       [-0.16880669,  0.6131351 , -0.48098026, -0.5       , -0.76870611],\n",
+       "       [ 1.2088001 , -0.92947267,  1.24226224, -0.5       ,  1.30088727],\n",
+       "       [ 0.44593006,  0.82758768,  0.62707846, -0.5       ,  1.30088727],\n",
+       "       [-0.90483959, -0.20234037, -0.21407884, -0.5       , -0.76870611],\n",
+       "       [-1.49419935, -0.26298539, -1.19196207, -0.5       , -0.76870611],\n",
+       "       [ 1.83846539,  1.07214791,  1.86319367, -0.5       , -0.76870611],\n",
+       "       [ 0.42966802,  0.13827054,  0.37625394,  2.        , -0.76870611],\n",
+       "       [-0.59092478, -2.81342077, -0.02839248, -0.5       , -0.76870611],\n",
+       "       [ 0.08492419, -0.95017758, -0.46096486, -0.5       ,  1.30088727],\n",
+       "       [ 1.26493068,  0.90993408, -0.55948669, -0.5       , -0.76870611],\n",
+       "       [-0.11002675, -0.69903054,  0.79713886,  2.        , -0.76870611],\n",
+       "       [-0.90669595,  0.12801572,  0.00300304,  2.        , -0.76870611],\n",
+       "       [ 0.11250125,  1.16515207,  0.75858643, -0.5       ,  1.30088727],\n",
+       "       [ 0.27709192,  1.15508553, -1.53809178, -0.5       ,  1.30088727],\n",
+       "       [ 1.03371959, -0.585363  ,  0.79877008, -0.5       , -0.76870611],\n",
+       "       [-0.70388936, -1.58289852, -0.19719396, -0.5       , -0.76870611],\n",
+       "       [-1.46723718, -0.30831009,  0.73848951,  2.        , -0.76870611],\n",
+       "       [ 1.46491286, -0.19745694,  1.39810017, -0.5       ,  1.30088727],\n",
+       "       [ 1.89486118,  0.51005662,  2.07686138, -0.5       ,  1.30088727],\n",
+       "       [-1.49419935,  0.4529585 , -1.53809178, -0.5       , -0.76870611],\n",
+       "       [-1.0396359 ,  1.20524087, -1.32098255, -0.5       , -0.76870611]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "686bdd68-93d3-4eec-a6eb-2fa29f0589b8",
    "metadata": {},
    "outputs": [
     {
@@ -2790,36 +2858,36 @@
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-3);\n",
        "}\n",
-       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>SVR(C=3000, kernel=&#x27;poly&#x27;)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>SVR</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.svm.SVR.html\">?<span>Documentation for SVR</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\"><pre>SVR(C=3000, kernel=&#x27;poly&#x27;)</pre></div> </div></div></div></div>"
+       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>SVR(C=1000)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>SVR</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.svm.SVR.html\">?<span>Documentation for SVR</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\"><pre>SVR(C=1000)</pre></div> </div></div></div></div>"
       ],
       "text/plain": [
-       "SVR(C=3000, kernel='poly')"
+       "SVR(C=1000)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn. svm import SVR\n",
-    "regressor=SVR(kernel=\"poly\",C=3000)\n",
-    "regressor.fit(x_train,y_train)"
+    "from sklearn.svm import SVR\n",
+    "regressor=SVR(kernel=\"rbf\",C=1000)\n",
+    "regressor.fit(x_train,y_train)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "f2212819-65fd-4f19-8187-d98e24f0b983",
+   "execution_count": 16,
+   "id": "bbc70b00-3cac-4798-b9b5-90855a482f45",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([91311.37922682])"
+       "array([108599.21691873])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2830,8 +2898,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "9a87111c-7dcc-4ae5-9d3f-ed5a5904b90d",
+   "execution_count": 17,
+   "id": "0cc9f86c-a25d-4147-a6f3-35f9b224c837",
    "metadata": {},
    "outputs": [
     {
@@ -2840,7 +2908,7 @@
        "array([35])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2851,8 +2919,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "e4e643db-212e-4d2b-8794-c40a6184aa04",
+   "execution_count": 18,
+   "id": "6175dc67-a704-45d0-b8f2-cad5ae4ac216",
    "metadata": {},
    "outputs": [
     {
@@ -2863,7 +2931,7 @@
        "       34])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2874,21 +2942,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "164dfff1-0431-43a1-a9c3-f60c250580be",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
-    "sc=StandardScaler()\n",
-    "x_train=sc.fit_transform(x_train)\n",
-    "x_test=sc.transform(x_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "c5396778-486d-4ed5-b87b-c80d5a22ec4b",
+   "execution_count": 19,
+   "id": "0d6d68aa-71dd-4b73-ad3e-d3f593caefa0",
    "metadata": {},
    "outputs": [
     {
@@ -2931,7 +2986,7 @@
        "       [-1.0396359 ,  1.20524087, -1.32098255, -0.5       , -0.76870611]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2942,27 +2997,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "aaa4e6a2-4403-44c0-ac78-6f612b169651",
+   "execution_count": 20,
+   "id": "0eb99724-5b32-4488-b1ec-7b0de489a3b5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Anaconda3\\Lib\\site-packages\\sklearn\\utils\\validation.py:2739: UserWarning: X does not have valid feature names, but SVR was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_pred=regressor.predict(x_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "36ad5a12-5db7-42d5-a7fc-2bb9db9d3a0e",
+   "execution_count": 21,
+   "id": "bb6366f8-3dad-41d0-8e76-e75869efc3db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2972,17 +3018,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "fcdcdcb0-81db-4829-b535-76788502647f",
+   "execution_count": 22,
+   "id": "36102806-8673-462e-bd64-49ae069dcf4f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.6408720251819024"
+       "0.0067683444800727965"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2993,8 +3039,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "c089180a-d03d-4732-ba32-9e965abc692c",
+   "execution_count": 23,
+   "id": "0a618e8b-3a13-423c-b2ef-cf33e6dfa1ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3003,8 +3049,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "6270383a-1077-4606-9af6-d28f1e0766b5",
+   "execution_count": 24,
+   "id": "8e87ffb0-0c99-4988-ad05-4a4a98f23024",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3013,8 +3059,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "bec6ee8b-ed6b-4fe8-8a02-cb8db75c64a2",
+   "execution_count": 25,
+   "id": "012fb2ff-9273-4478-8694-c4bf4ab3b277",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3023,8 +3069,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "aa887088-81ab-49cc-bdf8-d3530f0557a6",
+   "execution_count": 26,
+   "id": "d19b91ef-108a-4f6f-a648-9cf9c8d4a119",
    "metadata": {},
    "outputs": [
     {
@@ -3042,8 +3088,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "c2312b97-9e45-4e32-8743-196d3af9c031",
+   "execution_count": 27,
+   "id": "792db1bb-1ac1-4302-9c5d-47aaf623e6b4",
    "metadata": {},
    "outputs": [
     {
@@ -3052,7 +3098,7 @@
        "array([[-1.46755405, -4.33835385, -1.50744257, -0.5       ,  1.30088727]])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3063,46 +3109,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "1290c2f4-56e1-47d7-8f38-82723756b14c",
+   "execution_count": 56,
+   "id": "be48d650-339e-4a64-9f3f-8ab3b9d2589b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "loaded_model=pickle.load(open(\"finalized_model_svr.sav\",'rb'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "id": "ab05e65d-cfce-487d-8c28-a75d5d2311ac",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Anaconda3\\Lib\\site-packages\\sklearn\\utils\\validation.py:2739: UserWarning: X does not have valid feature names, but SVR was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
-   "source": [
+    "loaded_model=pickle.load(open(\"finalized_model_svr.sav\",'rb'))\n",
     "result=loaded_model.predict(preinput)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "8f19c241-518d-4b81-8764-90ab9baf2008",
+   "execution_count": 58,
+   "id": "2a767c3c-ed19-4f23-9466-628e4ac5b981",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([91311.37922682])"
+       "array([107679.41510409])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3114,15 +3142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "686bdd68-93d3-4eec-a6eb-2fa29f0589b8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0d6d68aa-71dd-4b73-ad3e-d3f593caefa0",
+   "id": "6331bd9a-d831-441c-9bcd-e17475c22dc3",
    "metadata": {},
    "outputs": [],
    "source": []
